# deep-learning-practice

./: .gitignore  activation_function.py  chap03.py  chap03_num.py  chapter04.py  chapter05_apple_orange.py  chapter05_check_gradient.py  chapter05_simple.py  chapter05_two_layer_net.py  chapter06_overfit_dropout.py  chapter06_overfit_weight_decay.py  chapter06_two_layer_net.py  chapter06_weight_init_activation_histogram.py
core/: activation.py  layer.py  layernet.py  layers.py  loss.py  parameter_updaters.py
dataset/: mnist.py
deep-learning-from-scratch-1/: chap03_num.py  chapter04.py  chapter05_apple_orange.py  chapter05_check_gradient.py  chapter05_simple.py  chapter06_momentum.py  chapter06_multi_layer_net.py  chapter06_overfit_weight_decay.py  chapter06_two_layer_net.py  layer.py
deep-learning-from-scratch-1/core/: gradient.py  layernet.py
deep-learning-from-scratch-4/: pyproject.toml
deep-learning-from-scratch-4/scripts/: run_agent.py  run_agent_alpha.py  run_agent_multi_runs.py  run_bandit.py
deep-learning-from-scratch-4/src/bandit/: agent.py  bandit.py
